Corrected installation docs for Java 10